--- a/less/widgets.less
+++ b/less/widgets.less
@@ -229,7 +229,7 @@
     max-width: 80%;
     vertical-align: middle;
     display: table-cell;
-    background-color: fade(@color-swatch4, 20%);
+    background-color: @color__feature-content--background;
     @media @tablet {
         max-width:100%;
     }
