--- a/less/navigation.less
+++ b/less/navigation.less
@@ -130,6 +130,7 @@
         border-radius: 0;
         outline: 0;
         border: 0;
+        background-color: transparent;
         &:before {
             content: '';
             position: absolute;
