--- a/default.twig
+++ b/default.twig
@@ -4,14 +4,8 @@
 
 {% include "includes/header.twig" %}
 <div class="bk-pt-default">
-	<div class="default-feature">
-		{{widget('feature', 'featuredefault', {
-			"header": "profile", 
-			"defaultBgImg": asset('images/feature-default.jpg'),
-			'positionTopPercentage': '0',
-			'showBtn': false,
-			buttonText: "Lorem Ipsum"
-		})|raw}}
+	<div class="page-title">
+		{{widget('pagetitle', 'title', {})|raw}}
 	</div>
 	
 	<!-- Container -->
