--- a/less/widgets.less
+++ b/less/widgets.less
@@ -304,7 +304,13 @@
     }
 }
 
+// Feature in Default Page
+// --------------------------
 
+.bk-pt-default .feature__background-image {
+    min-height: 200px;
+    height: 200px;
+}
 
 
 // -----------------------------
