change feature widget id

--- a/default.twig
+++ b/default.twig
@@ -4,7 +4,7 @@
 
 {% include "includes/header.twig" %}
 <div class="bk-pt-default">
-		{{widget('feature', 'featurehome', {
+		{{widget('feature', 'featuredefault', {
 		"header": "profile",
 		"defaultBgImg": asset('images/feature-bg.jpg'),
 		'positionTopPercentage': '0',
