--- a/default.twig
+++ b/default.twig
@@ -5,11 +5,11 @@
 {% include "includes/header.twig" %}
 <div class="bk-pt-default">
 		{{widget('feature', 'featuredefault', {
-		"header": "profile",
-		"defaultBgImg": asset('images/feature-bg.jpg'),
+		'header': 'profile',
+		'strapline': 'profile',
+		'defaultBgImg': asset("images/feature-bg.jpg"),
 		'positionTopPercentage': '0',
-		'showBtn': false,
-		buttonText: "Lorem Ipsum"
+		'showBtn': false
 	})|raw}}
 	
 	<!-- Container -->
