--- a/home.twig
+++ b/home.twig
@@ -6,8 +6,9 @@
 
 <div class="homepage-feature">
 	{{widget('feature', 'featurehome', {
-		"header": "profile", 
-		"defaultBgImg": asset('images/feature-bg.jpg'),
+		'header': 'profile',
+		'strapline': 'profile',
+		'defaultBgImg': asset("images/feature-bg.jpg"),
 		'positionTopPercentage': '0',
 		'showBtn': true,
 		buttonText: "Lorem Ipsum"
