--- a/default.twig
+++ b/default.twig
@@ -4,13 +4,7 @@
 
 {% include "includes/header.twig" %}
 <div class="bk-pt-default">
-		{{widget('feature', 'featuredefault', {
-		'header': 'profile',
-		'strapline': 'profile',
-		'defaultBgImg': asset("images/feature-bg.jpg"),
-		'positionTopPercentage': '0',
-		'showBtn': false
-	})|raw}}
+	Test
 	
 	<!-- Container -->
 	<div class="container">
